Feat: zelliges image

--- a/data/blog/en/demo.mdx
+++ b/data/blog/en/demo.mdx
@@ -66,4 +66,11 @@ featured: true
       height={1632}            
       className="w-full"
     />     
+    <FancyBoxImage 
+      src="/static/images/pages/zelliges-01.png" 
+      alt="Zelliges"  
+      width={2912}
+      height={1632}            
+      className="w-full"
+    />      
 </div>
