--- a/data/blog/fr/demo.mdx
+++ b/data/blog/fr/demo.mdx
@@ -7,7 +7,8 @@ authors: ['default']
 draft: false
 summary: Une simple page de démonstration.
 featured: true
-
+banner: '/static/images/pages/fontaine-02-enhanced.png'
+images: '/static/images/pages/fontaine-02-enhanced.png'
 ---
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
