--- a/data/blog/en/demo.mdx
+++ b/data/blog/en/demo.mdx
@@ -7,6 +7,8 @@ authors: ['default']
 draft: false
 summary: A simple demo page.
 featured: true
+banner: '/static/images/pages/fontaine-02-enhanced.png'
+images: '/static/images/pages/fontaine-02-enhanced.png'
 ---
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
