--- a/data/blog/fr/tapisseries-eclats-marbres.mdx
+++ b/data/blog/fr/tapisseries-eclats-marbres.mdx
@@ -15,51 +15,58 @@ C'est une mosaïque d’éclats de marbre, de travertin ou de pierre de différe
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
     <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/tapisserie-01.png" 
-      alt="Fontaine 02"  
+      alt="tapisserie-01"  
       width={2882}
       height={1591}
       className="w-full"
     />
     <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/tapisserie-02.png" 
-      alt="Fontaine 01"  
+      alt="tapisserie-02"  
       width={2912}
       height={1632}      
       className="w-full"
     />
       <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/mosaique-01.png" 
-      alt="Maison"  
+      alt="mosaique-01"  
       width={2912}
       height={1632}       
       className="w-full"
     />
     <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/mosaique-02.png" 
-      alt="Piscine"  
+      alt="mosaique-02"  
       width={2912}
       height={1632}         
       className="w-full"
     />
     <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/plafond-01.png" 
-      alt="Porte"  
+      alt="plafond-01"  
       width={2912}
       height={1632}            
       className="w-full"
     />
     <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/chantier-01.png" 
-      alt="Rue"  
+      alt="chantier-01"  
       width={2912}
       height={1632}            
       className="w-full"
     />    
     <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/chantier-02.png" 
-      alt="Village"  
+      alt="chantier-02"  
       width={2912}
       height={1632}            
       className="w-full"
     />      
+    <FancyBoxImage 
+      src="/static/images/pages/tapisseries-eclats-marbre/chantier-03.png" 
+      alt="chantier-03"  
+      width={2912}
+      height={1632}            
+      className="w-full"
+    />    
 </div>
