Fix: pages dates

--- a/data/blog/fr/sols-mosaiques.mdx
+++ b/data/blog/fr/sols-mosaiques.mdx
@@ -1,6 +1,6 @@
 ---
 title: Les sols en mosaïques de pierre
-date: '2025-01-06'
+date: '2025-01-03'
 language: fr
 tags: ['mosaic', 'stone']
 authors: ['default']
@@ -15,6 +15,7 @@ C'est une mosaïque d’éclats de marbre, de travertin ou de pierre de différe
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
   {[
     { src: "/static/images/pages/sols-mosaiques/sol-01.png", alt: "sol-01" },
+    { src: "/static/images/pages/sols-mosaiques/porte-01.png", alt: "porte-01" },
     { src: "/static/images/pages/sols-mosaiques/sol-02.png", alt: "sol-02" },
     { src: "/static/images/pages/sols-mosaiques/sol-03.png", alt: "sol-03" },
     { src: "/static/images/pages/sols-mosaiques/sol-04.png", alt: "sol-04" },
