--- a/data/blog/en/tapisseries-eclats-marbres.mdx
+++ b/data/blog/en/tapisseries-eclats-marbres.mdx
@@ -1,6 +1,6 @@
 ---
 title: Marble Chip Tapestries
-date: '2025-01-06'
+date: '2025-01-04'
 language: en
 tags: ['marble', 'tapestries']
 authors: ['default']
@@ -28,7 +28,14 @@ interior and exterior floors, gardens, and patios. It is a true tapestry made in
       height={1632}      
       className="w-full"
     />
-      <FancyBoxImage 
+    <FancyBoxImage 
+      src="/static/images/pages/tapisseries-eclats-marbre/piscine-01.png" 
+      alt="piscine-01"  
+      width={2912}
+      height={1632}      
+      className="w-full"
+    />    
+    <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/mosaique-01.png" 
       alt="mosaique-01"  
       width={2912}
