--- a/data/blog/fr/tapisseries-eclats-marbres.mdx
+++ b/data/blog/fr/tapisseries-eclats-marbres.mdx
@@ -1,6 +1,6 @@
 ---
 title: Les tapisseries d'éclats de marbre
-date: '2025-01-06'
+date: '2025-01-04'
 language: fr
 tags: ['marbre', 'tapisseries']
 authors: ['default']
@@ -27,7 +27,14 @@ C'est une mosaïque d’éclats de marbre, de travertin ou de pierre de différe
       height={1632}      
       className="w-full"
     />
-      <FancyBoxImage 
+    <FancyBoxImage 
+      src="/static/images/pages/tapisseries-eclats-marbre/piscine-01.png" 
+      alt="piscine-01"  
+      width={2912}
+      height={1632}      
+      className="w-full"
+    />        
+    <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/mosaique-01.png" 
       alt="mosaique-01"  
       width={2912}
