--- a/data/blog/en/sols-mosaiques.mdx
+++ b/data/blog/en/sols-mosaiques.mdx
@@ -44,7 +44,7 @@ It is a mosaic of stone, schist and marble of all colors shattered or rolled. It
         alt={image.alt}
         width={2912}
         height={1632}
-        className="absolute top-0 left-0 w-full h-full object-cover"
+        className="w-full h-full object-cover"
       />
     </div>
   ))}
