--- a/data/blog/fr/sols-mosaiques.mdx
+++ b/data/blog/fr/sols-mosaiques.mdx
@@ -44,7 +44,7 @@ C'est une mosaïque d’éclats de marbre, de travertin ou de pierre de différe
         alt={image.alt}
         width={2912}
         height={1632}
-        className="absolute top-0 left-0 w-full h-full object-cover"
+        className="w-full h-full object-cover"
       />
     </div>
   ))}
