--- a/data/authors/en/default.mdx
+++ b/data/authors/en/default.mdx
@@ -1,5 +1,5 @@
 ---
-name: Denis Gabriel
+name: Maroc Mosaic
 avatar: /static/images/assets/denis-01.jpg
 email: contact@marocmosaic.com
 facebook: https://facebook.com
@@ -12,3 +12,32 @@ default: true
 
 MAROC MOSAIC (DGMD sarl) is a company specializing in the decoration of outdoor and indoor spaces. For 40 years, it has been installing its stone or marble mosaic floors, walls, and domes, as well as traditional fountains, on prestigious construction sites across Europe, Morocco, and the Middle East. The company uses the finest natural materials to create exceptional decorations and Andalusian and Roman atmospheres, inspired by the history of the Alhambra and Pompeii.
 
+MAROC MOSAIC (FRANCE).
+
+Tel: +33 7 49 90 29 21
+
+MAROC MOSAIC (QATAR).
+
+Tel: +974 31 01 01 77
+
+MAROC MOSAIC (KSA).
+
+Tel: +966 533 978 555
+
+ 
+
+MAROC MOSAIC (MAROC).
+
+DGMD sarl
+
+Tel: +212 06 72 35 91 36
+
+Mail: contact@marocmosaic.com
+
+La bergerie "Volubilis"
+
+Jbilets, Tamensourt
+
+40 000 Marrakech
+
+MAROC
