--- a/data/authors/fr/default.mdx
+++ b/data/authors/fr/default.mdx
@@ -1,5 +1,5 @@
 ---
-name: Denis Gabriel
+name: Maroc Mosaic
 avatar: /static/images/assets/denis-01.jpg
 email: contact@marocmosaic.com
 facebook: https://facebook.com
@@ -11,3 +11,31 @@ default: true
 # Bienvenue sur Maroc Mosaic
 
 MAROC MOSAIC (DGMD sarl) est une entreprise de décoration des espaces extérieurs et intérieurs. Depuis 40 ans, elle installe sur les chantiers les plus prestigieux en Europe, au Maroc et au Moyen Orient ses sols, ses murs et ses coupoles en mosaïque de pierres ou de marbres et ses fontaines traditionnelles. Elle utilise les matériaux naturels les plus nobles pour créer des décors d’exception et des ambiances Andalouses et Romaines héritées de l’histoire de l’Alhambra et de Pompéi.
+
+MAROC MOSAIC (FRANCE).
+
+Tel: +33 7 49 90 29 21
+
+MAROC MOSAIC (QATAR).
+
+Tel: +974 31 01 01 77
+
+MAROC MOSAIC (KSA).
+
+Tel: +966 533 978 555
+
+MAROC MOSAIC (MAROC).
+
+DGMD sarl
+
+Tel: +212 06 72 35 91 36
+
+Mail: contact@marocmosaic.com
+
+La bergerie "Volubilis"
+
+Jbilets, Tamensourt
+
+40 000 Marrakech
+
+MAROC
