--- a/data/authors/en/default.mdx
+++ b/data/authors/en/default.mdx
@@ -10,34 +10,28 @@ default: true
 
 # Welcome to Maroc Mosaic
 
-MAROC MOSAIC (DGMD sarl) is a company specializing in the decoration of outdoor and indoor spaces. For 40 years, it has been installing its stone or marble mosaic floors, walls, and domes, as well as traditional fountains, on prestigious construction sites across Europe, Morocco, and the Middle East. The company uses the finest natural materials to create exceptional decorations and Andalusian and Roman atmospheres, inspired by the history of the Alhambra and Pompeii.
+**MAROC MOSAIC (DGMD sarl)** is a company specializing in the decoration of outdoor and indoor spaces. For 40 years, it has been installing its stone or marble mosaic floors, walls, and domes, as well as traditional fountains, on prestigious construction sites across Europe, Morocco, and the Middle East. 
 
-MAROC MOSAIC (FRANCE).
+The company uses the finest natural materials to create exceptional decorations and Andalusian and Roman atmospheres, inspired by the history of the Alhambra and Pompeii.
 
-Tel: +33 7 49 90 29 21
+---
 
-MAROC MOSAIC (QATAR).
+## Contact Information
 
-Tel: +974 31 01 01 77
+### MAROC MOSAIC (FRANCE)
+- **Tel:** +33 7 49 90 29 21
 
-MAROC MOSAIC (KSA).
+### MAROC MOSAIC (QATAR)
+- **Tel:** +974 31 01 01 77
 
-Tel: +966 533 978 555
+### MAROC MOSAIC (KSA)
+- **Tel:** +966 533 978 555
 
- 
-
-MAROC MOSAIC (MAROC).
-
-DGMD sarl
-
-Tel: +212 06 72 35 91 36
-
-Mail: contact@marocmosaic.com
-
-La bergerie "Volubilis"
-
-Jbilets, Tamensourt
-
-40 000 Marrakech
-
-MAROC
+### MAROC MOSAIC (MAROC)
+- **Company:** DGMD sarl  
+- **Tel:** +212 06 72 35 91 36  
+- **Mail:** [contact@marocmosaic.com](mailto:contact@marocmosaic.com)  
+- **Address:**  
+  La bergerie "Volubilis"  
+  Jbilets, Tamensourt  
+  40 000 Marrakech, MAROC
