Feat: demo unfeatured

--- a/data/blog/en/demo.mdx
+++ b/data/blog/en/demo.mdx
@@ -6,7 +6,7 @@ tags: ['cobblestones', 'mosaics', 'zelliges', 'fountains']
 authors: ['default']
 draft: false
 summary: A simple demo page.
-featured: true
+featured: false
 banner: '/static/images/pages/demo/fontaine-02-enhanced.png'
 images: '/static/images/pages/demo/fontaine-02-enhanced.png'
 ---
