--- a/data/blog/fr/demo.mdx
+++ b/data/blog/fr/demo.mdx
@@ -6,7 +6,7 @@ tags: ['pavés', 'mosaïques', 'zelliges','fontaines']
 authors: ['default']
 draft: false
 summary: Une simple page de démonstration.
-featured: true
+featured: false
 banner: '/static/images/pages/demo/fontaine-02-enhanced.png'
 images: '/static/images/pages/demo/fontaine-02-enhanced.png'
 ---
