Feat: author contact

--- a/data/authors/en/contact.mdx
+++ b/data/authors/en/contact.mdx
@@ -1,6 +1,6 @@
 ---
 name: Maroc Mosaic
-avatar: /static/images/assets/denis-01.jpg
+avatar: /static/images/assets/avatar-mosaique.png
 email: contact@marocmosaic.com
 facebook: https://facebook.com
 linkedin: https://linkedin.com
