--- a/app/[locale]/i18n/locales/fr/common.json
+++ b/app/[locale]/i18n/locales/fr/common.json
@@ -2,6 +2,7 @@
   "home": "Accueil",
   "blog": "Blog",
   "tags": "Tags",
+  "menu": "Menu",
   "projects": "Projets",
   "about": "À Propos",
   "lang": "Langage",
