Fix: author slug

--- a/data/blog/en/demo.mdx
+++ b/data/blog/en/demo.mdx
@@ -3,7 +3,7 @@ title: Simple demo
 date: '2025-01-02'
 language: en
 tags: ['cobblestones', 'mosaics', 'zelliges', 'fountains']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: A simple demo page.
 featured: false
