--- a/data/blog/en/fontaines.mdx
+++ b/data/blog/en/fontaines.mdx
@@ -3,7 +3,7 @@ title: Fountains
 date: '2025-01-03'
 language: en
 tags: ['fontaines']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: Fountains, true works of art...
 featured: true
