--- a/data/blog/en/mosaiques-romaines.mdx
+++ b/data/blog/en/mosaiques-romaines.mdx
@@ -3,7 +3,7 @@ title: Roman Mosaics
 date: '2025-01-06'
 language: en
 tags: ['mosaic', 'rome']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: This is a mosaic made of small cubes (tesserae) of marble...
 featured: true
