--- a/data/blog/en/paves.mdx
+++ b/data/blog/en/paves.mdx
@@ -3,7 +3,7 @@ title: The cobblestones
 date: '2025-01-04'
 language: en
 tags: ['paves']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: Laid on sand mixed with lime or cement...
 featured: true
