--- a/data/blog/en/sols-mosaiques.mdx
+++ b/data/blog/en/sols-mosaiques.mdx
@@ -3,7 +3,7 @@ title: Stone mosaic floors
 date: '2025-01-07'
 language: en
 tags: ['mosaic', 'stone']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: It is a mosaic of stone, schist and marble of all colors shattered or rolled...
 featured: true
