--- a/data/blog/en/tapisseries-eclats-marbres.mdx
+++ b/data/blog/en/tapisseries-eclats-marbres.mdx
@@ -3,7 +3,7 @@ title: Marble Chip Tapestries
 date: '2025-01-08'
 language: en
 tags: ['marble', 'tapestries']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: This is a mosaic of marble, travertine, or stone chips...
 featured: true
