--- a/data/blog/en/zelliges-fez.mdx
+++ b/data/blog/en/zelliges-fez.mdx
@@ -3,7 +3,7 @@ title: Zellige of Fez
 date: '2025-01-05'
 language: en
 tags: ['zelliges', 'fez']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary:  Zellige art is an art probably derived from Byzantine mosaic...
 featured: true
