--- a/data/blog/fr/demo.mdx
+++ b/data/blog/fr/demo.mdx
@@ -3,7 +3,7 @@ title: Simple démonstration
 date: '2025-01-02'
 language: fr
 tags: ['pavés', 'mosaïques', 'zelliges','fontaines']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: Une simple page de démonstration.
 featured: false
