--- a/data/blog/fr/fontaines.mdx
+++ b/data/blog/fr/fontaines.mdx
@@ -3,7 +3,7 @@ title: Les fontaines
 date: '2025-01-03'
 language: fr
 tags: ['fontaines']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: Les fontaines, véritables œuvres d'art...
 featured: true
