--- a/data/blog/fr/mosaiques-romaines.mdx
+++ b/data/blog/fr/mosaiques-romaines.mdx
@@ -3,7 +3,7 @@ title: Les mosaïques romaines
 date: '2025-01-06'
 language: fr
 tags: ['mosaic', 'rome']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: C'est une mosaïque de petits cubes (tesselles) de marbre...
 featured: true
