--- a/data/blog/fr/sols-mosaiques.mdx
+++ b/data/blog/fr/sols-mosaiques.mdx
@@ -3,7 +3,7 @@ title: Les sols en mosaïques de pierre
 date: '2025-01-07'
 language: fr
 tags: ['mosaic', 'stone']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: C’est une mosaïque que l’on retrouve dans le Generalife de l’Alhambra...
 featured: true
