--- a/data/blog/fr/tapisseries-eclats-marbres.mdx
+++ b/data/blog/fr/tapisseries-eclats-marbres.mdx
@@ -3,7 +3,7 @@ title: Les tapisseries d'éclats de marbre
 date: '2025-01-08'
 language: fr
 tags: ['marbre', 'tapisseries']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: C'est une mosaïque d’éclats de marbre, de travertin ou de pierre...
 featured: true
