--- a/data/blog/fr/paves.mdx
+++ b/data/blog/fr/paves.mdx
@@ -3,7 +3,7 @@ title: Les pavés
 date: '2025-01-04'
 language: fr
 tags: ['paves']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: Posés sur sable mélangé avec de la chaux ou du ciment...
 featured: true
