--- a/data/blog/fr/zelliges-fez.mdx
+++ b/data/blog/fr/zelliges-fez.mdx
@@ -3,7 +3,7 @@ title: Les zelliges de Fez
 date: '2025-01-05'
 language: fr
 tags: ['zelliges', 'fez']
-authors: ['default']
+authors: ['contact']
 draft: false
 summary: L'art du zellige est un art probablement dérivé de la mosaïque Bysantine...
 featured: true
