--- a/app/[locale]/i18n/locales/en/common.json
+++ b/app/[locale]/i18n/locales/en/common.json
@@ -2,7 +2,7 @@
   "home": "Home",
   "blog": "Blog",
   "tags": "Tags",
-  "menu": "Menu",
+  "menu": "Projects",
   "projects": "Projects",
   "about": "About",
   "lang": "Language",
