Feat: feedback customer

--- a/app/[locale]/i18n/locales/en/footer.json
+++ b/app/[locale]/i18n/locales/en/footer.json
@@ -1,4 +1,5 @@
 {
   "theme": "Tailwind Nextjs Theme",
-  "background": "Background Image inspired from"
+  "background": "Background Image inspired from",
+  "author_ref":"Created by Sébastien Chossat - culturedevops.com"
 }
