--- a/data/blog/en/sols-mosaiques.mdx
+++ b/data/blog/en/sols-mosaiques.mdx
@@ -5,12 +5,12 @@ language: en
 tags: ['mosaic', 'stone']
 authors: ['contact']
 draft: false
-summary: It is a mosaic of stone, schist and marble of all colors shattered or rolled...
+summary: It is a mosaic found in the Generalife of the Alhambra...
 featured: true
 banner: '/static/images/pages/sols-mosaiques/sol-01.png'
 images: '/static/images/pages/sols-mosaiques/sol-01.png'
 ---
-It is a mosaic of stone, schist and marble of all colors shattered or rolled. It is used in gardens and patios. The shale is used as a black anchor on the bottom made of stones and marble. The silvery black schist of Jbilets on a white or colored background and the two opposing shapes of the materials (Opus for the backgrounds and elongated for the schist tongues) offer mosaicists infinite graphic possibilities. It is a mosaic found in the Generalife of the Alhambra, throughout the Iberian Peninsula and in Morocco since the centuries of Al Andaluz.
+It is a mosaic found in the Generalife of the Alhambra, throughout the Iberian Peninsula, and in Morocco since the centuries of Al-Andalus. This mosaic is made of stone, schist, and marble in a variety of colors, either shattered or smoothed. It is used in gardens and patios. Schist is used like black ink on a light background made of stones and marble. The silvery black schist from the Jbilets, set against a white or colored background, along with the contrasting shapes of the materials (Opus for the backgrounds and elongated shapes for the schist tongues), provides mosaic artists with infinite graphic possibilities.
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
   {[
