--- a/data/blog/en/tapisseries-eclats-marbres.mdx
+++ b/data/blog/en/tapisseries-eclats-marbres.mdx
@@ -7,20 +7,27 @@ authors: ['contact']
 draft: false
 summary: This is a mosaic of marble, travertine, or stone chips...
 featured: true
-banner: '/static/images/pages/tapisseries-eclats-marbre/tapisserie-01.png'
-images: '/static/images/pages/tapisseries-eclats-marbre/tapisserie-01.png'
+banner: '/static/images/pages/tapisseries-eclats-marbre/tapisserie-01-white.png'
+images: '/static/images/pages/tapisseries-eclats-marbre/tapisserie-01-white.png'
 ---
 This is a mosaic of marble, travertine, or stone chips in various colors and small sections (5 to 10 mm). It is suitable for domes, walls, fountains, 
 interior and exterior floors, gardens, and patios. It is a true tapestry made in the workshop of Marrakech and sent to international sites.
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
     <FancyBoxImage 
+      src="/static/images/pages/tapisseries-eclats-marbre/tapisserie-01-white.png" 
+      alt="tapisserie-01-white"  
+      width={2882}
+      height={1591}
+      className="w-full"
+    />
+    <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/tapisserie-01.png" 
       alt="tapisserie-01"  
       width={2882}
       height={1591}
       className="w-full"
-    />
+    />    
     <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/tapisserie-02.png" 
       alt="tapisserie-02"  
