--- a/data/blog/fr/sols-mosaiques.mdx
+++ b/data/blog/fr/sols-mosaiques.mdx
@@ -10,7 +10,7 @@ featured: true
 banner: '/static/images/pages/sols-mosaiques/sol-01.png'
 images: '/static/images/pages/sols-mosaiques/sol-01.png'
 ---
-C'est une mosaïque d’éclats de marbre, de travertin ou de pierre de différentes couleurs et de petites sections (5 à 10 mm). Elle convient pour les coupoles, les murs, les bassins, les sols intérieurs et extérieurs, les jardins et les patios. C'est une véritable tapisserie réalisée à l'atelier de Marrakech et envoyée sur les chantiers à l'international.
+C’est une mosaïque que l’on retrouve dans le Generalife de l’Alhambra, dans toute la péninsule Ibérique et au Maroc depuis les siècles d’Al Andaluz.C'est une mosaïque de pierre, de schiste et de marbre de toutes les couleurs éclatée ou roullée. On l’utilise dans les jardins et les patios. Le schiste est utilisé comme une encre noire sur le fond clair, fait de pierres et marbres. Le  schiste noir argenté des Jbilets sur fond blanc ou de couleurs et les deux formes opposées des matériaux (Opus pour les fonds et allongées pour les langues de schiste) offrent aux mosaïstes des possibilités graphiques infinies.
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
   {[
