--- a/data/blog/fr/tapisseries-eclats-marbres.mdx
+++ b/data/blog/fr/tapisseries-eclats-marbres.mdx
@@ -7,12 +7,19 @@ authors: ['contact']
 draft: false
 summary: C'est une mosaïque d’éclats de marbre, de travertin ou de pierre...
 featured: true
-banner: '/static/images/pages/tapisseries-eclats-marbre/tapisserie-01.png'
-images: '/static/images/pages/tapisseries-eclats-marbre/tapisserie-01.png'
+banner: '/static/images/pages/tapisseries-eclats-marbre/tapisserie-01-white.png'
+images: '/static/images/pages/tapisseries-eclats-marbre/tapisserie-01-white.png'
 ---
 C'est une mosaïque d’éclats de marbre, de travertin ou de pierre de différentes couleurs et de petites sections (5 à 10 mm). Elle convient pour les coupoles, les murs, les bassins, les sols intérieurs et extérieurs, les jardins et les patios. C'est une véritable tapisserie réalisée à l'atelier de Marrakech et envoyée sur les chantiers à l'international.
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
+    <FancyBoxImage 
+      src="/static/images/pages/tapisseries-eclats-marbre/tapisserie-01-white.png" 
+      alt="tapisserie-01-white"  
+      width={2882}
+      height={1591}
+      className="w-full"
+    />
     <FancyBoxImage 
       src="/static/images/pages/tapisseries-eclats-marbre/tapisserie-01.png" 
       alt="tapisserie-01"  
