--- a/data/authors/en/contact.mdx
+++ b/data/authors/en/contact.mdx
@@ -2,8 +2,8 @@
 name: Maroc Mosaic
 avatar: /static/images/assets/avatar-mosaique.png
 email: contact@marocmosaic.com
-facebook: https://facebook.com
-linkedin: https://linkedin.com
+facebook: https://www.facebook.com/denis.gabriel.73
+instagram: https://www.instagram.com/denisgabrielmosaic
 language: en
 default: true
 ---
