Feat: add photos

--- a/data/blog/en/sols-mosaiques.mdx
+++ b/data/blog/en/sols-mosaiques.mdx
@@ -37,6 +37,7 @@ It is a mosaic found in the Generalife of the Alhambra, throughout the Iberian P
     { src: "/static/images/pages/sols-mosaiques/chantier-01.png", alt: "chantier-01" },
     { src: "/static/images/pages/sols-mosaiques/chantier-02.png", alt: "chantier-02" },
     { src: "/static/images/pages/sols-mosaiques/chantier-03.png", alt: "chantier-03" },
+    { src: "/static/images/pages/sols-mosaiques/chantier-04.png", alt: "chantier-04" },    
   ].map((image, index) => (
     <div key={index} className="rounded-lg">
       <FancyBoxImage
