--- a/data/blog/en/zelliges-fez.mdx
+++ b/data/blog/en/zelliges-fez.mdx
@@ -28,6 +28,13 @@ Zellige art is an art probably derived from Byzantine mosaic made of colored sto
       className="w-full"
     />
     <FancyBoxImage 
+      src="/static/images/pages/zelliges-fez/maison-01.png" 
+      alt="maison-01"  
+      width={2912}
+      height={1632}      
+      className="w-full"
+    />        
+    <FancyBoxImage 
       src="/static/images/pages/zelliges-fez/sol-01.png" 
       alt="sol-01"  
       width={2912}
