--- a/data/blog/fr/zelliges-fez.mdx
+++ b/data/blog/fr/zelliges-fez.mdx
@@ -28,6 +28,13 @@ L'art du zellige est un art probablement dérivé de la mosaïque Bysantine fait
       className="w-full"
     />
     <FancyBoxImage 
+      src="/static/images/pages/zelliges-fez/maison-01.png" 
+      alt="maison-01"  
+      width={2912}
+      height={1632}      
+      className="w-full"
+    />    
+    <FancyBoxImage 
       src="/static/images/pages/zelliges-fez/sol-01.png" 
       alt="sol-01"  
       width={2912}
