--- a/data/blog/en/paves.mdx
+++ b/data/blog/en/paves.mdx
@@ -21,6 +21,7 @@ Laid on sand mixed with lime or cement, broken or sawn paving stones have been u
     { src: "/static/images/pages/paves/place-01.png", alt: "place-01" },
     { src: "/static/images/pages/paves/place-02.png", alt: "place-02" },
     { src: "/static/images/pages/paves/place-03.png", alt: "place-03" },
+    { src: "/static/images/pages/paves/place-04.png", alt: "place-04" },    
     { src: "/static/images/pages/paves/sol-01.png", alt: "sol-01" },
     { src: "/static/images/pages/paves/sol-02.png", alt: "sol-02" },
     { src: "/static/images/pages/paves/sol-03.png", alt: "sol-03" },
