--- a/data/blog/fr/sols-mosaiques.mdx
+++ b/data/blog/fr/sols-mosaiques.mdx
@@ -37,6 +37,7 @@ C’est une mosaïque que l’on retrouve dans le Generalife de l’Alhambra, da
     { src: "/static/images/pages/sols-mosaiques/chantier-01.png", alt: "chantier-01" },
     { src: "/static/images/pages/sols-mosaiques/chantier-02.png", alt: "chantier-02" },
     { src: "/static/images/pages/sols-mosaiques/chantier-03.png", alt: "chantier-03" },
+    { src: "/static/images/pages/sols-mosaiques/chantier-04.png", alt: "chantier-04" },
   ].map((image, index) => (
     <div key={index} className="rounded-lg">
       <FancyBoxImage
