Feat: full layout page

--- a/data/blog/en/demo.mdx
+++ b/data/blog/en/demo.mdx
@@ -9,6 +9,7 @@ summary: A simple demo page.
 featured: false
 banner: '/static/images/pages/demo/fontaine-02-enhanced.png'
 images: '/static/images/pages/demo/fontaine-02-enhanced.png'
+layout: 'PostLayout'
 ---
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
