Feat: contact form on author page

--- a/data/authors/en/contact.mdx
+++ b/data/authors/en/contact.mdx
@@ -16,6 +16,10 @@ The company uses the finest natural materials to create exceptional decorations 
 
 ---
 
+<ContactFormWrapper />
+
+---
+
 ## Contact Information
 
 ### MAROC MOSAIC (FRANCE)
