--- a/data/authors/fr/contact.mdx
+++ b/data/authors/fr/contact.mdx
@@ -15,6 +15,8 @@ default: true
 L'entreprise utilise les matériaux naturels les plus nobles pour créer des décors d’exception et des ambiances andalouses et romaines, héritées de l’histoire de l’Alhambra et de Pompéi.
 
 ---
+<ContactFormWrapper />
+---
 
 ## Informations de contact
 
