--- a/app/[locale]/i18n/locales/en/newsletter.json
+++ b/app/[locale]/i18n/locales/en/newsletter.json
@@ -1,7 +1,7 @@
 {
   "mail": "Email address",
   "title": "Subscribe to the newsletter",
-  "messageError": "Your e-mail adress is invalid or you are already subscribed!",
+  "messageError": "Your e-mail address is invalid or you are already subscribed!",
   "placeholderSuccess": "You're subscribed !  🎉",
   "placeholderDefault": "Enter your email",
   "buttonSuccess": "Thank you!",
