--- a/app/[locale]/i18n/locales/en/common.json
+++ b/app/[locale]/i18n/locales/en/common.json
@@ -33,6 +33,7 @@
   "name": "Name*",
   "title": "Contact me",
   "mail": "Email*",
+  "address": "Address*",
   "button": "Submit",
   "error": "Oops, something went wrong!",
   "thanks": "Thank you for contacting me, I will get back to you shortly!",
