--- a/app/[locale]/i18n/locales/en/common.json
+++ b/app/[locale]/i18n/locales/en/common.json
@@ -2,6 +2,7 @@
   "home": "Home",
   "blog": "Blog",
   "tags": "Tags",
+  "references": "References",
   "menu": "Our mosaics",
   "projects": "Projects",
   "about": "About",
