Feat: improve ref

--- a/app/[locale]/i18n/locales/en/common.json
+++ b/app/[locale]/i18n/locales/en/common.json
@@ -2,8 +2,8 @@
   "home": "Home",
   "blog": "Blog",
   "tags": "Tags",
-  "references": "References",
-  "menu": "Our mosaics",
+  "references": "Our References",
+  "menu": "Our Mosaics",
   "projects": "Projects",
   "about": "About",
   "lang": "Language",
