--- a/app/[locale]/i18n/locales/fr/common.json
+++ b/app/[locale]/i18n/locales/fr/common.json
@@ -2,8 +2,8 @@
   "home": "Accueil",
   "blog": "Blog",
   "tags": "Tags",
-  "references": "Références",
-  "menu": "Nos mosaïques",
+  "references": "Nos Références",
+  "menu": "Nos Mosaïques",
   "projects": "Projets",
   "about": "À Propos",
   "lang": "Langage",
