--- a/app/[locale]/i18n/locales/en/hero.json
+++ b/app/[locale]/i18n/locales/en/hero.json
@@ -1,4 +1,4 @@
 {
   "title": "Maroc Mosaic",
-  "title_description": "MAROC MOSAIC (DGMD sarl) est une entreprise de décoration des espaces extérieurs et intérieurs. Depuis 40 ans, elle installe sur les chantiers les plus prestigieux en Europe, au Maroc et au Moyen Orient ses sols, ses murs et ses coupoles en mosaïque de pierres ou de marbres et ses fontaines traditionnelles. Elle utilise les matériaux naturels les plus nobles pour créer des décors d'exception et des ambiances Andalouses et Romaines héritées de l'histoire de l'Alhambra et de Pompéi."
+  "title_description": "MAROC MOSAIC (DGMD sarl) is a company specializing in the decoration of outdoor and indoor spaces. For 40 years, it has been installing its mosaics of stone or marble on floors, walls, domes, and traditional fountains at the most prestigious sites in Europe, Morocco, and the Middle East. The company uses the finest natural materials to create exceptional designs and Andalusian and Roman-inspired atmospheres, drawing from the rich history of the Alhambra and Pompeii."
 }
