--- a/app/[locale]/i18n/locales/en/references.json
+++ b/app/[locale]/i18n/locales/en/references.json
@@ -2,5 +2,7 @@
   "project": "Projects",
   "viewOnMap": "Map",
   "description": "Description",
-  "country": "Country"
+  "country": "Country",
+  "table_section_title": "Major mosaic tiling projects completed between 1986 and 2023",
+  "references": "Our References"
 }
