Feat: localization buttons

--- a/app/[locale]/i18n/locales/fr/references.json
+++ b/app/[locale]/i18n/locales/fr/references.json
@@ -4,5 +4,6 @@
   "description": "Description",
   "country": "Pays",
   "table_section_title": "Principaux chantiers de revêtement en mosaïque réalisés entre 1986 et 2023",
-  "references": "Nos Références"
+  "references": "Nos Références",
+  "view_on_map": "Voir sur la carte"
 }
