--- a/app/[locale]/i18n/locales/en/references.json
+++ b/app/[locale]/i18n/locales/en/references.json
@@ -4,5 +4,6 @@
   "description": "Description",
   "country": "Country",
   "table_section_title": "Major mosaic tiling projects completed between 1986 and 2023",
-  "references": "Our References"
+  "references": "Our References",
+  "view_on_map": "View on map"
 }
