Feat: improve references

--- a/app/[locale]/i18n/locales/en/references.json
+++ b/app/[locale]/i18n/locales/en/references.json
@@ -5,5 +5,6 @@
   "country": "Country",
   "table_section_title": "Major mosaic tiling projects completed between 1986 and 2023",
   "references": "Our References",
-  "view_on_map": "View on map"
+  "view_on_map": "View on map",
+  "search": "Search..."
 }
