--- a/app/[locale]/i18n/locales/fr/references.json
+++ b/app/[locale]/i18n/locales/fr/references.json
@@ -5,5 +5,6 @@
   "country": "Pays",
   "table_section_title": "Principaux chantiers de revêtement en mosaïque réalisés entre 1986 et 2023",
   "references": "Nos Références",
-  "view_on_map": "Voir sur la carte"
+  "view_on_map": "Voir sur la carte",
+  "search": "Rechercher..."
 }
