--- a/app/[locale]/i18n/locales/en/hero.json
+++ b/app/[locale]/i18n/locales/en/hero.json
@@ -1,4 +1,6 @@
 {
   "title": "Maroc Mosaic",
-  "title_description": "MAROC MOSAIC (DGMD sarl) is a company specializing in the decoration of outdoor and indoor spaces. For 40 years, it has been installing its mosaics of stone or marble on floors, walls, domes, and traditional fountains at the most prestigious sites in Europe, Morocco, and the Middle East. The company uses the finest natural materials to create exceptional designs and Andalusian and Roman-inspired atmospheres, drawing from the rich history of the Alhambra and Pompeii."
+  "title_description": "MAROC MOSAIC (DGMD sarl) is a company specializing in the decoration of outdoor and indoor spaces. For 40 years, it has been installing its mosaics of stone or marble on floors, walls, domes, and traditional fountains at the most prestigious sites in Europe, Morocco, and the Middle East. The company uses the finest natural materials to create exceptional designs and Andalusian and Roman-inspired atmospheres, drawing from the rich history of the Alhambra and Pompeii.",
+  "catalog": "Our Catalog",
+  "dl_catalog": "Download the catalog"
 }
