Feat: search menu i18n

--- a/app/[locale]/i18n/locales/en/common.json
+++ b/app/[locale]/i18n/locales/en/common.json
@@ -47,5 +47,6 @@
   "language": "Language",
   "french": "French",
   "english": "English",
-  "sidetoc": "On this page:"
+  "sidetoc": "On this page:",
+  "navigate": "Navigate"
 }
