--- a/app/[locale]/i18n/locales/fr/common.json
+++ b/app/[locale]/i18n/locales/fr/common.json
@@ -47,5 +47,6 @@
   "language": "Langue",
   "french": "Français",
   "english": "Anglais",
-  "sidetoc": "Sur cette page:"
+  "sidetoc": "Sur cette page:",
+  "navigate": "Naviguer"
 }
