--- a/app/[locale]/i18n/locales/fr/hero.json
+++ b/app/[locale]/i18n/locales/fr/hero.json
@@ -2,5 +2,6 @@
   "title": "Maroc Mosaic",
   "title_description": "MAROC MOSAIC (DGMD sarl) est une entreprise de décoration des espaces extérieurs et intérieurs. Depuis 40 ans, elle installe sur les chantiers les plus prestigieux en Europe, au Maroc et au Moyen Orient ses sols, ses murs et ses coupoles en mosaïque de pierres ou de marbres et ses fontaines traditionnelles. Elle utilise les matériaux naturels les plus nobles pour créer des décors d'exception et des ambiances Andalouses et Romaines héritées de l'histoire de l'Alhambra et de Pompéi.",
   "catalog": "Notre Catalogue",
-  "dl_catalog": "Télécharger le catalogue"
+  "dl_catalog": "Télécharger le catalogue",
+  "mosaics": "Nos Mosaïques"
 }
