--- a/data/blog/en/mosaiques-romaines.mdx
+++ b/data/blog/en/mosaiques-romaines.mdx
@@ -15,6 +15,7 @@ Some beautiful examples can be found in the ancient city of Volubilis in Morocco
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
   {[
+    { src: "/static/images/pages/mosaiques-romaines/mosaique-21-upscaled-2-croped.jpg", imgSrc:"/static/images/pages/mosaiques-romaines/mosaique-21-upscaled-2.jpg", alt: "mosaique-21" },        
     { src: "/static/images/pages/mosaiques-romaines/mosaique-01.png", alt: "mosaique-01" },
     { src: "/static/images/pages/mosaiques-romaines/mosaique-02-2.png", alt: "mosaique-02" },
     { src: "/static/images/pages/mosaiques-romaines/mosaique-03.png", alt: "mosaique-03" },
@@ -40,6 +41,7 @@ Some beautiful examples can be found in the ancient city of Volubilis in Morocco
       <FancyBoxImage
         src={image.src}
         alt={image.alt}
+        {...(image.imgSrc && { imgSrc: image.imgSrc })}
         width={2912}
         height={1632}
         className="w-full h-full object-cover"
