--- a/data/blog/fr/mosaiques-romaines.mdx
+++ b/data/blog/fr/mosaiques-romaines.mdx
@@ -16,6 +16,7 @@ villas Patriciennes. On en retrouve de très belles dans l'ancienne citée de Vo
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2">
   {[
+    { src: "/static/images/pages/mosaiques-romaines/mosaique-21-upscaled-2-croped.jpg", imgSrc:"/static/images/pages/mosaiques-romaines/mosaique-21-upscaled-2.jpg", alt: "mosaique-21" },    
     { src: "/static/images/pages/mosaiques-romaines/mosaique-01.png", alt: "mosaique-01" },
     { src: "/static/images/pages/mosaiques-romaines/mosaique-02-2.png", alt: "mosaique-02" },
     { src: "/static/images/pages/mosaiques-romaines/mosaique-03.png", alt: "mosaique-03" },
@@ -41,6 +42,7 @@ villas Patriciennes. On en retrouve de très belles dans l'ancienne citée de Vo
       <FancyBoxImage
         src={image.src}
         alt={image.alt}
+        {...(image.imgSrc && { imgSrc: image.imgSrc })}
         width={2912}
         height={1632}
         className="w-full h-full object-cover"
